[package]
name = "mini_rust_desk_common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
dirs-next = "2.0"
filetime = "0.2"
sodiumoxide = "0.2"
regex = "1.8"
lazy_static = "1.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "synchapi", "pdh", "memoryapi", "sysinfoapi"] }
mac_address = "1.1"
machine-uid = "0.2"
chrono = "0.4"
anyhow = "1.0"
futures-util = "0.3"
directories-next = "2.0"
rand = "0.8"
zstd = "0.9"
log = "0.4"
futures = "0.3"
protobuf = { version = "3.4", features = ["with-bytes"] }
socket2 = { version = "0.3", features = ["reuseport"] }
bytes = { version = "1.6", features = ["serde"] }
tokio-util = { version = "0.7", features = ["full"] }
flexi_logger = { version = "0.27", features = ["async"] }
tokio-socks = { git = "https://github.com/rustdesk-org/tokio-socks" }
confy = { git = "https://github.com/rustdesk-org/confy" }
sysinfo = { git = "https://github.com/rustdesk-org/sysinfo", branch = "rlim_max" }
thiserror = "1.0"
httparse = "1.5"
base64 = "0.22"
url = "2.2"
tokio-native-tls ="0.3"
toml = "0.7"
uuid = { version = "1.3", features = ["v4"] }
libc = "0.2"


[build-dependencies]
protobuf-codegen = { version = "3.4" }
